# chapter-tracker

./: .gitignore  .idanarye.integrake  .idanarye.moonicipal.lua  .idanarye.omnipytent.3.py  Cargo.toml  README.md  chapter_tracker.db3  install-script.sh  project.clj  rakefile  run.clj
assets/: default.css  gui.glade
doc/: intro.md
examples/: normalize_database.rs  refresh_links_directory.rs  scan_for_dangling_files.rs  scan_for_new_files.rs
macros/: Cargo.toml
macros/src/: lib.rs  prop_sync_derive.rs  util.rs
migrations/: 20210429092019_replicate-old-tables.sql  20210429130408_fix-date_of_read-with-only-date.sql  20210429133816_fix-illegal-volume-values.sql  20210603113826_add-maintain-symlinks-to-media-types.sql  20230816133226_add_adjacent_file_types_field_to_media_types.sql
migrations/2018-06-07-221401_create_media_tyeps/: up.sql
migrations/2018-06-07-221742_create_serieses/: down.sql  up.sql
migrations/2018-06-07-221747_create_episodes/: up.sql
migrations/2018-06-07-221753_create_directories/: up.sql
src/: files_discovery.rs  lib.rs  links_handling.rs  main.rs  manual_migrations.rs  models.rs  msgs.rs  schema.rs
src/actors/: db_actor.rs  mod.rs
src/chapter_tracker/: core.clj  db.clj  file_matching.clj  model.clj  schema.clj  table_definitions.clj  view.clj
src/chapter_tracker/view/: create_directory_dialog.clj  create_media_dialog.clj  create_series_dialog.clj  delete_series_dialog.clj  episode_table.clj  main_frame.clj  series_and_episode_panel.clj  series_directories_panel.clj  single_episode_panel.clj  tools.clj
src/gui/: directory.rs  links_dir.rs  main_app.rs  media_types.rs  mod.rs  msgs.rs  series.rs
src/util/: db.rs  dialogs.rs  edit_mode.rs  mod.rs  prop_sync.rs  typed_quark.rs
test/chapter_tracker/: core_test.clj
tests/: test_scan.rs
