[package]
name = "chapter-tracker"
version = "0.1.0"
authors = ["Idan Arye <IdanArye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-actix-native-tls", "macros", "sqlite" ] }
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = { version = "0.1.5", features = ["fs"] }
anyhow = "1.0.40"
log = "0.4.14"
flexi_logger = "0.17.1"
typed-builder = "0.9.0"
futures = "0.3.14"
regex = "1.4.5"
actix = "0.11.1"
rust-embed = "5.9.0"
woab = "0.4.0"
gtk = "0.9.2"
glib = "0.10.3"
