# [workspace]
# members = ["macros"]

[package]
name = "chapter-tracker"
version = "0.1.0"
authors = ["Idan Arye <IdanArye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", default-features = false, features = [ "runtime-tokio", "macros", "sqlite", "chrono", "migrate" ] }
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = { version = "0.1.5", features = ["fs"] }
anyhow = "1.0.40"
log = "0.4.14"
flexi_logger = "0.25"
typed-builder = "0.15"
futures = "0.3.14"
regex = "1.4.5"
actix = "0.13"
rust-embed = "6.8.0"
woab = "0.8.0"
# woab = { path = "../woab"}
gtk = "0.18"
glib = "0.18"
hashbrown = "0.14"
fuzzy-matcher = "0.3"
gio = "0.18"
structopt = "0.3.21"
# chapter-tracker-macros = { path = "macros" }
