[package]
name = "chapter-tracker-macros"
version = "0.1.0"
authors = ["Idan Arye <IdanArye@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = "1.0.72"
